# rules_python-issue-522

./: BUILD.bazel  README.md  WORKSPACE.bazel  test.bzl
