# WORKSPACE
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

register_toolchains("//:py_toolchain")

RULES_PYTHON_TAG = "0.3.0"
RULES_PYTHON_SHA256 = "934c9ceb552e84577b0faf1e5a2f0450314985b4d8712b2b70717dc679fdc01b"

http_archive(
    name = "rules_python",
    sha256 = RULES_PYTHON_SHA256,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_TAG, RULES_PYTHON_TAG),
)
